--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Mes projets </title>
 </head>
 <body>
-    
+    <header>
+        <h1>Mes projets </h1>
+    </header>
 </body>
 </html>
