--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Mes projets </h1>
+        <h1 class="titre-page">Mes projets </h1>
     </header>
 </body>
 </html>
