Il me reste plus qu'a faire tous pour que  le design soit simple et beau

--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Mes projets </title>
+    <title>Mes realisations </title>
 </head>
 <body>
+
+    <!--HEADER-->
     <header>
-        <h1 class="titre-page">Mes projets </h1>
+        <h1 class="titre-page">Mes réalisations </h1>
+        
     </header>
+
+
+    <section>
+        <h1 class="titre-mediavea"> Médiavea</h1>
+        <!--<p>Tu pourras trouvez ci-dessous une image montrant quelque élement du site que j'ai créer lors de mon stage chez Médiavea . </p>-->
+        <div class="site-picture">
+            <img class="picture-mediavea" src="img/mediavea.jpg" alt="">
+        </div>
+    </section>
+
+    <section>
+        <h1 class="titre-telmusique"> Telmusique</h1>
+        <!--<p>Tu pourras trouvez ci-dessous une image montrant quelque élement du site que j'ai créer lors de mon stage chez Médiavea . </p>-->
+        <div class="site-picture">
+            <img class="picture-telmusique" src="img/telmusique.jpg" alt="">
+        </div>
+    </section>
 </body>
 </html>
