--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <section>
-        <h1 class="titre-mediavea"> Médiavea</h1>
+        <h1 class="titre-mediavea"> Mediavea</h1>
         <!--<p>Tu pourras trouvez ci-dessous une image montrant quelque élement du site que j'ai créer lors de mon stage chez Médiavea . </p>-->
         <div class="site-picture">
             <img class="picture-mediavea" src="img/mediavea.jpg" alt="">
